[tool.poetry]
name = "random-quote-generator-99999"
version = "0.1.0"
description = ""
authors = ["LeCongThuong <thuongle276@gmail.com>"]
readme = "README.md"
packages = [{include = "random_quote_generator"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
